Switch refine tests to project makefile.
Add missing mpi finalize to unrefine test.

--- a/tests/refine/Makefile
+++ b/tests/refine/Makefile
@@ -1,18 +1,10 @@
-FLAGS = -W -Wall -Wextra -pedantic -std=c++11 -O3
-INCLUDES = -I../.. -I$$HOME/include -L$$HOME/lib -lboost_program_options -lzoltan
-CXX = mpic++ $(FLAGS)
+all:
+	@$(MAKE) tests/refine/executables -C ../..
 
-all: refine_simple unrefine_simple scalability
-
-refine_simple: refine_simple.cpp ../../dccrg.hpp Makefile
-	$(CXX) refine_simple.cpp $(INCLUDES) -o refine_simple
-
-unrefine_simple: unrefine_simple.cpp ../../dccrg.hpp Makefile
-	$(CXX) unrefine_simple.cpp $(INCLUDES) -o unrefine_simple
-
-scalability: scalability.cpp ../../dccrg.hpp Makefile
-	$(CXX) scalability.cpp $(INCLUDES) -o scalability
+t: test
+test:
+	@$(MAKE) tests/refine/tests -C ../..
 
 c: clean
 clean:
-	rm -f refine_simple unrefine_simple scalability *.visit *.vtk
+	@$(MAKE) tests/refine/clean -C ../..
