Switch grid loading test to project makefile.

--- a/tests/loading/Makefile
+++ b/tests/loading/Makefile
@@ -1,16 +1,10 @@
-FLAGS = -W -Wall -Wextra -pedantic -std=c++11 -O3
-INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_program_options -lzoltan
-CXX = mpic++ $(FLAGS)
+all:
+	@$(MAKE) tests/loading/executables -C ../..
 
-all: load
-
-load: load.cpp ../../dccrg.hpp ../../dccrg_cartesian_geometry.hpp Makefile
-	$(CXX) -DDEBUG load.cpp $(INCLUDES) -o load
-
-d: data
-data:
-	rm -rf load.visit load_*vtk
+t: test
+test:
+	@$(MAKE) tests/loading/tests -C ../..
 
 c: clean
-clean: data
-	rm -f load
+clean:
+	@$(MAKE) tests/loading/clean -C ../..
