Switch particle test to project makefile and update to latest api.

--- a/tests/particles/Makefile
+++ b/tests/particles/Makefile
@@ -1,28 +1,10 @@
-FLAGS = -W -Wall -Wextra -pedantic -std=c++11 -O3
-INCLUDES = -I$$HOME/include -L$$HOME/lib -lzoltan
-CXX = mpic++ $(FLAGS)
+all:
+	@$(MAKE) tests/particles/executables -C ../..
 
-PROGRAMS = simple
-
-HEADERS = \
-	../../dccrg.hpp \
-	../../dccrg_cartesian_geometry.hpp \
-	../../dccrg_length.hpp \
-	../../dccrg_mapping.hpp \
-	../../dccrg_topology.hpp \
-	../../dccrg_types.hpp \
-	cell.hpp \
-
-all: $(PROGRAMS)
-
-simple: simple.cpp $(HEADERS) Makefile
-	$(CXX) -DDEBUG simple.cpp $(INCLUDES) -o simple
-
-d: data
-data:
-	rm -f *.dc *.vtk *.visit
+t: test
+test:
+	@$(MAKE) tests/particles/tests -C ../..
 
 c: clean
-clean: data
-	rm -f $(PROGRAMS)
-
+clean:
+	@$(MAKE) tests/particles/clean -C ../..
