Switch scalability test to project makefile.

--- a/tests/scalability/Makefile
+++ b/tests/scalability/Makefile
@@ -1,21 +1,6 @@
-FLAGS = -W -Wall -Wextra -pedantic -std=c++11 -O3
-INCLUDES = -I$$HOME/include -L$$HOME/lib -lboost_program_options -lzoltan
-CXX = mpic++ $(FLAGS)
-
-HEADERS = \
-	../../dccrg.hpp \
-	../../dccrg_cartesian_geometry.hpp \
-	../../dccrg_length.hpp \
-	../../dccrg_mapping.hpp \
-	../../dccrg_stretched_cartesian_geometry.hpp \
-	../../dccrg_types.hpp \
-	../../dccrg_topology.hpp
-
-all: scalability
-
-scalability: scalability.cpp $(HEADERS) Makefile
-	$(CXX) scalability.cpp $(INCLUDES) -o scalability
+all:
+	@$(MAKE) tests/scalability/executables -C ../..
 
 c: clean
 clean:
-	rm -f scalability
+	@$(MAKE) tests/scalability/clean -C ../..
